@@ -5,6 +5,7 @@
   - Removed deprecated support for data arguments from Mojo::JSON::Pointer.
   - Removed deprecated AUTOLOAD and pluck methods from Mojo::Collection.
   - Removed deprecated AUTOLOAD and val methods from Mojo::DOM.
+  - Fixed JSON Pointer escaping bug.
 
 5.72  2015-01-11
   - Added EXPERIMENTAL support for case-insensitive attribute selectors like
